cooler fadeIn + z-index fixing

--- a/spritas/src/create/CreatePost.css
+++ b/spritas/src/create/CreatePost.css
@@ -172,7 +172,6 @@
     pointer-events: auto;
     cursor: wait !important;
     opacity: 0.25;
-    z-index: 2;
 
     animation-name: submitting;
     animation-duration: 10s;
