--- a/spritas/src/navigation/Navi.css
+++ b/spritas/src/navigation/Navi.css
@@ -1,6 +1,6 @@
 .Navi-full {
     position: relative;
-    z-index: 3;
+    z-index: 6;
 }
 
 .Navi {
