--- a/spritas/src/posts/PostHome.css
+++ b/spritas/src/posts/PostHome.css
@@ -7,6 +7,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     opacity: 0;
+    z-index: 2;
 
     transition: opacity 0.25s;
 }
