--- a/spritas/src/topics/TopicContainer.css
+++ b/spritas/src/topics/TopicContainer.css
@@ -11,6 +11,7 @@
     cursor: pointer;
     position: sticky;
     top: 0;
+    z-index: 1;
 
     -moz-user-select: none;
     -webkit-user-select: none;
