--- a/spritas/src/user/UserContainer.css
+++ b/spritas/src/user/UserContainer.css
@@ -44,6 +44,7 @@
     cursor: pointer;
     position: sticky;
     top: 0;
+    z-index: 1;
 
     -moz-user-select: none;
     -webkit-user-select: none;
